# CVibe

./: .env.example  .gitignore  agent.md  start.sh
ai-engine/: .env.example  Dockerfile  generate_proto.sh  main.py  pyproject.toml  requirements.txt
ai-engine/proto/: ai_engine.proto
ai-engine/src/: __init__.py  config.py
ai-engine/src/agents/: __init__.py
ai-engine/src/agents/growth/: __init__.py  workflow.py
ai-engine/src/agents/interview/: __init__.py  agent.py  analyzer_agent.py  models.py  orchestrator.py  prompts.py  questioner_agent.py  schemas.py  summarizer_agent.py  workflow.py
ai-engine/src/agents/job/: __init__.py  workflow.py
ai-engine/src/agents/mockinterview/: __init__.py  workflow.py
ai-engine/src/agents/resume/: __init__.py  parser.py
ai-engine/src/agents/resumebuilder/: __init__.py  workflow.py
ai-engine/src/grpc_server/: __init__.py  server.py
ai-engine/src/llm/: __init__.py  client.py
biz-service/: pom.xml
doc/: 00_OVERVIEW.md  01_API_CONTRACTS.md  02_DATA_MODELS.md  03_AUTH_MODULE.md  04_PROFILE_MODULE.md  05_RESUME_MODULE.md  06_RESUME_BUILDER_MODULE.md  07_INTERVIEW_MODULE.md  08_MOCK_INTERVIEW_MODULE.md  09_GROWTH_MODULE.md  10_JOB_MODULE.md  11_COMMUNITY_MODULE.md  12_NOTIFICATION_MODULE.md  13_SETTINGS_MODULE.md  14_ERROR_HANDLING.md  15_CODING_STANDARDS.md  16_AI_ENGINE.md  17_SEARCH_SERVICE.md  18_SERVICE_INTEGRATION.md  ADMIN_OPS.md  AI_FRAMEWORK.md  ARCHITECTURE.md  BIZ_LOGIC.md  CONTRACTS.md  DATA_SCHEMA.md  FRONTEND_UX.md  HIGH_PERF.md  SECURITY_COMPLIANCE.md  TESTING_QA.md
frontend/: package-lock.json  (+2 more)
(+416 files in other folders)
